# ForgeX

./: .env  .gitignore  LICENSE  README.md  VERSION.md  progress.md  pyproject.toml
forge/: __init__.py  config.py  main.py
forge/api/: __init__.py  artifact.py  routes.py
forge/cognition/: __init__.py  compiler.py  intent_router.py  registry.py
forge/decision/: __init__.py  engine.py
forge/demo/: __init__.py  event_demo.py
forge/events/: __init__.py  protocol.py
forge/graph/: __init__.py  node.py  tool_graph.py
forge/human/: __init__.py  approval.py  explanation.py  impact_report.py  partial_merge.py
forge/kernel/: __init__.py  budget.py  event_bus.py  intent.py  runtime.py  scheduler.py  state.py
forge/knowledge/: __init__.py  architecture_map.py  code_graph.py  dependency_graph.py  impact_analysis.py  symbol_index.py
forge/live/: __init__.py  behavior_diff.py  coverage.py  trace.py
forge/llm/: __init__.py  client.py  prompts.py
forge/memory/: __init__.py  compressor.py  context.py  episodic.py  procedural.py  semantic.py
forge/planner/: __init__.py  planner.py  types.py
scripts/: get_token.ps1  get_token.py  push_to_github.py
tests/: test_artifact_lifecycle.py  test_artifact_v3.py  test_decision.py  test_decision_v3.py  test_event_protocol.py  test_evi_v2.py  test_failure_memory.py  test_graph.py  test_graph_v3.py  test_human.py  test_intent_router.py  test_kernel.py  test_knowledge.py  test_live.py  test_memory.py  test_memory_v3.py  test_recovery.py  test_snapshot.py  test_tools.py  test_verifier.py  test_workspace.py
(+48 files in other folders)
